--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,33 @@ services:
       - "./backend/db:/docker-entrypoint-initdb.d" #sincroniza el script sql con mysql
     ports:
       - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
+      interval: 5s
+      timeout: 3s
+      retries: 2
+      start_period: 0s
+
+# Eliminar volumen de mysql
+# docker volume rm $(docker volume ls -q)
+  app:
+    depends_on:
+      mysqldb:
+        condition: service_healthy
+        restart: true
+    links:
+      - mysqldb
+    build: ./backend
+    env_file: ./backend/.env
+    ports:
+      - 3000:3000
+    environment:
+      - DB_HOST=mysqldb
+      - DB_USER=user
+      - DB_PASSWORD=123
+      - DB_NAME=Base-datos-prueba
+      - DB_PORT=3306
+    #command: ["./wait-for-it.sh", "mysql:3307"]
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -19,6 +46,3 @@ services:
     environment:
       - PMA_HOST=mysqldb #Mismo nombre del servicio de arriba
       - PMA_PORT=3306
-
-# Eliminar volumen de mysql
-# docker volume rm $(docker volume ls -q)
